test/types/tuple/diten/tupleExpandError.good
tupleExpandError.chpl:2: error: illegal tuple expansion context
