test/types/tuple/diten/tupleExpandError.chpl
var x = (1,);
var y = (...x);
writeln(y);

var x2 = (1, 2, 3);
var y2 = (...x2);
writeln(y2);

var x3 = (1, 2, 3, 4, 5);
var y3 = (...x3);
writeln(y3);
